# scenoRITA-7.0

./: .gitignore  README.md  main.sh  pyproject.toml  run_experiments.sh  set_up.sh  sora2.sh  sora3.sh
data/maps/: README.md
data/maps/san_francisco/: routing_map.txt
data/scripts/: dev_start.sh  multi_ctn_dev_start.sh
data/scripts/install/: install_docker.sh  install_poetry.sh  install_python311.sh
data/scripts/misc/: py_proto.sh
src/: analyze_experiments.py  config.py  create_scenario.py  dev_start.py  install.py  main.py  plot_heatmap.py  re_simulate.py  rq_diversity.py  rq_effectiveness.py  rq_efficiency.py  rq_map_coverage.py  rq_pure_collision.py  rq_statistics.py  rq_testing_time.py  run_scenario.py  stop_docker.py  utils.py
src/apollo/: container.py  cyber_bridge.py  map_service.py  plot_scenario.py  utils.py
src/modules/audio/proto/: audio_common_pb2.py  audio_conf_pb2.py  audio_event_pb2.py  audio_pb2.py
src/modules/bridge/proto/: udp_bridge_remote_info_pb2.py
src/modules/canbus/proto/: canbus_conf_pb2.py  ch_pb2.py  chassis_detail_pb2.py  chassis_pb2.py  devkit_pb2.py  ge3_pb2.py  lexus_pb2.py  neolix_edu_pb2.py  transit_pb2.py  vehicle_parameter_pb2.py  wey_pb2.py  zhongyun_pb2.py
src/modules/common/proto/: direction_pb2.py  drive_event_pb2.py  drive_state_pb2.py  error_code_pb2.py  geometry_pb2.py  header_pb2.py  pnc_point_pb2.py  vehicle_signal_pb2.py
src/modules/common_msgs/audio_msgs/: audio_common_pb2.py  audio_event_pb2.py  audio_pb2.py
src/modules/common_msgs/basic_msgs/: direction_pb2.py  drive_event_pb2.py  drive_state_pb2.py  error_code_pb2.py  geometry_pb2.py  header_pb2.py  pnc_point_pb2.py  vehicle_id_pb2.py  (+1 more)
src/mylib/: clustering.py  cubic_spline_planner.py  efficiency.py  stanley_controller.py  stats.py  workers.py
src/mylib/kdtree/: __init__.py  kdtree.py  kdtree_node.py
src/mymath/kdtree/: kdtree_params.py
src/scenoRITA/: operators.py  representation.py
src/scenoRITA/components/: grading_metrics.py  scenario_generator.py  scenario_player.py
(+293 files in other folders)
